--- a/src/Options/FormatOption.module.css
+++ b/src/Options/FormatOption.module.css
@@ -1,3 +1,34 @@
+ul,
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+ul {
+  position: relative;
+  width: 300px;
+  user-select: none;
+}
+
+li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  background-color: #363636;
+  cursor: grab;
+
+  &:hover {
+    background-color: #454545;
+  }
+}
+
 .side {
   display: flex;
   align-items: center;
@@ -40,12 +71,13 @@
   line-height: 1.4;
   white-space: nowrap;
   overflow: hidden;
+  transition: opacity 200ms;
 
   &.unselectable {
     opacity: 0.5;
   }
 
-  span {
+  :is(span) {
     width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -57,7 +89,7 @@
     color: #ffffff8c;
   }
 
-  &.primary .description {
+  /* &.primary .description {
     color: #fed736;
-  }
+  } */
 }
