--- a/src/options/Checkbox/Checkbox.module.css
+++ b/src/options/Checkbox/Checkbox.module.css
@@ -1,5 +1,17 @@
 .Checkbox {
-  font-size: 0;
+  display: flex;
+  align-items: center;
+  gap: 22px;
+  white-space: nowrap;
+
+  :is(button) {
+    font-size: 0;
+  }
+
+  .label {
+    user-select: none;
+    cursor: pointer;
+  }
 }
 
 .button {
