center-align button text

--- a/src/options/Options.module.css
+++ b/src/options/Options.module.css
@@ -12,7 +12,7 @@ button {
   letter-spacing: inherit;
   font-family: inherit;
   font-size: inherit;
-  text-align: initial;
+  text-align: center;
   -webkit-tap-highlight-color: transparent;
   color: inherit;
   background-color: transparent;
