--- a/src/options/Options.module.css
+++ b/src/options/Options.module.css
@@ -106,6 +106,12 @@ input {
   }
 }
 
+.destructiveAction {
+  &:hover {
+    background-color: red;
+  }
+}
+
 .generalSection {
   display: flex;
   flex-direction: column;
