add format delete mode

--- a/src/options/FormatOption/FormatOption.module.css
+++ b/src/options/FormatOption/FormatOption.module.css
@@ -32,6 +32,10 @@
   margin: 28px 0;
 }
 
+.deleteConfirmation {
+  text-align: center;
+}
+
 .buttonRow {
   display: flex;
   justify-content: flex-end;
