--- a/src/options/FormatOption/content/Custom.module.css
+++ b/src/options/FormatOption/content/Custom.module.css
@@ -1,6 +1,12 @@
+.Custom {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .name {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   gap: 20px;
   white-space: nowrap;
 
