--- a/src/options/Options.module.css
+++ b/src/options/Options.module.css
@@ -89,6 +89,14 @@ input {
   }
 }
 
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 32px;
+  margin-bottom: 24px;
+}
+
 .primaryAction {
   padding: 0.6em 1em;
   border-radius: 5.34px;
