update button cursor

--- a/src/options/Options.module.css
+++ b/src/options/Options.module.css
@@ -16,7 +16,7 @@ button {
   -webkit-tap-highlight-color: transparent;
   color: inherit;
   background-color: transparent;
-  cursor: default;
+  cursor: pointer;
 }
 
 :root {
