--- a/src/options/Options.module.css
+++ b/src/options/Options.module.css
@@ -133,6 +133,13 @@ input {
 .generalSection {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.generalSubSection {
+  display: flex;
+  flex-direction: column;
   gap: 20px;
 }
 
@@ -145,4 +152,8 @@ input {
 
 .formatOptionTips {
   padding-bottom: 16px;
+}
+
+.formats {
+  margin-top: 16px;
 }
