add disabled style to button

--- a/src/options/Options.module.css
+++ b/src/options/Options.module.css
@@ -17,6 +17,12 @@ button {
   color: inherit;
   background-color: transparent;
   cursor: pointer;
+
+  &:disabled {
+    opacity: 0.5;
+    pointer-events: none;
+    user-select: none;
+  }
 }
 
 :root {
