--- a/src/options/TextOption/TextOption.module.css
+++ b/src/options/TextOption/TextOption.module.css
@@ -19,4 +19,81 @@
     box-sizing: border-box;
     text-align: center;
   }
+
+  .tokenSelector {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 4px 0;
+    font-size: 10px;
+    font-family:
+      -apple-system,
+      BlinkMacSystemFont,
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      'Open Sans',
+      'Helvetica Neue',
+      sans-serif;
+    overflow: hidden;
+    color: #aaa;
+    opacity: 0;
+    max-height: 22px;
+    pointer-events: none;
+    transition: opacity 400ms, max-height 400ms;
+
+    @media (prefers-color-scheme: dark) {
+      color: #888;
+    }
+
+    .TextOption:focus-within & {
+      opacity: 1;
+      max-height: 160px;
+      pointer-events: initial;
+    }
+
+    .insert {
+      padding-right: 2px;
+    }
+
+    .token {
+      padding: 3px 8px;
+      margin: 2px;
+      border-radius: 1000px;
+      color: #666;
+      background-color: #00000010;
+
+      @media (prefers-color-scheme: dark) {
+        color: #bbb;
+        background-color: #ffffff16;
+      }
+
+      &:hover,
+      &:focus {
+        color: #000;
+        background-color: #00000019;
+
+        @media (prefers-color-scheme: dark) {
+          color: #fff;
+          background-color: #ffffff20;
+        }
+      }
+    }
+
+    .expandCollapse {
+      padding-left: 8px;
+      cursor: pointer;
+
+      &:hover,
+      &:focus {
+        color: #000;
+
+        @media (prefers-color-scheme: dark) {
+          color: #fff;
+        }
+      }
+    }
+  }
 }
