--- a/src/options/FormatOptionEditor/content/Custom.module.css
+++ b/src/options/FormatOptionEditor/content/Custom.module.css
@@ -4,3 +4,78 @@
   gap: 12px;
   margin-top: 10px;
 }
+
+.preview {
+  position: relative;
+  padding: 16px 18px 0;
+  font-size: 10px;
+  border-radius: 10px;
+  color: #000;
+  background-color: #ebebeb;
+
+  @media (prefers-color-scheme: dark) {
+    color: #ffffffcc;
+    background-color: #202020;
+  }
+
+  .previewText {
+    width: 300px;
+    font-family: monospace;
+    white-space: pre;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    outline: none;
+
+    &::-webkit-scrollbar {
+      width: 16px;
+      height: 16px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-style: solid;
+      border-width: 6px 0;
+      border-color: transparent;
+      background-clip: padding-box;
+      background-color: #99999955;
+    }
+
+    &::-webkit-scrollbar-corner {
+      background-color: transparent;
+    }
+  }
+
+  .previewLabel {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 8px 16px;
+    font-family:
+      system-ui,
+      -apple-system,
+      BlinkMacSystemFont,
+      'Segoe UI',
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      'Open Sans',
+      'Helvetica Neue',
+      sans-serif;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    pointer-events: none;
+    color: #555;
+    background-color: #0000000c;
+    opacity: 1;
+    transition: opacity 200ms;
+
+    @media (prefers-color-scheme: dark) {
+      color: #fff;
+      background-color: #00000038;
+    }
+
+    .preview:hover & {
+      opacity: 0;
+    }
+  }
+}
