--- a/src/options/FormatOptionEditor/FormatOptionEditor.module.css
+++ b/src/options/FormatOptionEditor/FormatOptionEditor.module.css
@@ -34,7 +34,7 @@
   }
 
   :is(h1) {
-    margin-top: 0;
+    margin: 0;
     font-size: 1.2rem;
   }
 }
@@ -57,6 +57,7 @@
   display: flex;
   justify-content: flex-end;
   gap: 8px;
+  margin-top: 8px;
 
   :is(button) {
     min-width: 56px;
