--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -45,7 +45,7 @@ header {
     display: flex;
     align-items: center;
 
-    button {
+    :is(button) {
       display: flex;
       align-items: center;
       gap: 8px;
