--- a/src/options/Options.module.css
+++ b/src/options/Options.module.css
@@ -66,7 +66,8 @@ main {
   overflow-y: scroll;
 }
 
-h3 {
+h3,
+h4 {
   font-size: 1.5rem;
   font-weight: 200;
   line-height: 1.2rem;
@@ -77,6 +78,11 @@ h3 {
   @media (prefers-color-scheme: dark) {
     color: #f3e5ab;
   }
+}
+
+h4 {
+  font-size: 1.25rem;
+  margin: 1.5rem 0;
 }
 
 input {
