disable label click when checkbox is disabled

--- a/src/options/Checkbox/Checkbox.module.css
+++ b/src/options/Checkbox/Checkbox.module.css
@@ -12,6 +12,11 @@
   .label {
     user-select: none;
     cursor: pointer;
+
+    .Checkbox.disabled & {
+      opacity: 0.5;
+      pointer-events: none;
+    }
   }
 
   .tip {
