hide number input spin buttons

--- a/src/options/Options.module.css
+++ b/src/options/Options.module.css
@@ -110,6 +110,16 @@ input {
   }
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .header {
   display: flex;
   align-items: center;
