adjust background color

--- a/src/options/Options.module.css
+++ b/src/options/Options.module.css
@@ -27,7 +27,7 @@ button {
 
 :root {
   color-scheme: light dark;
-  background-color: #ededed;
+  background-color: #edededdd;
 
   @media (prefers-color-scheme: dark) {
     background-color: #242424;
