--- a/src/options/FormatConfig/FormatConfig.module.css
+++ b/src/options/FormatConfig/FormatConfig.module.css
@@ -120,3 +120,54 @@ li {
     }
   }
 }
+
+.tip {
+  position: absolute;
+  left: 100%;
+  width: max-content;
+  max-width: 170px;
+  padding: 8px 12px;
+  margin-left: 20px;
+  font-size: 0.7rem;
+  border: 1px solid #00000058;
+  border-radius: 6px;
+  text-align: center;
+  white-space: pre-wrap;
+  background-color: #f7f7f7;
+  visibility: hidden;
+  opacity: 0;
+
+  li:hover & {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 300ms ease-in;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    top: 50%;
+    right: 100%;
+    transform-origin: center;
+    transform: translateY(-50%) translateX(50%) rotate(45deg);
+    /* intentional higher alpha */
+    border-left: 1px solid #00000088;
+    border-bottom: 1px solid #00000088;
+    background-color: #f7f7f7;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    border: 1px solid #ffffff58;
+    background-color: #242424;
+
+    &::after {
+      /* intentional higher alpha */
+      border-left: 1px solid #ffffff88;
+      border-bottom: 1px solid #ffffff88;
+      background-color: #242424;
+    }
+  }
+}
