--- a/src/options/FormatOptsEditor/content/Custom.module.css
+++ b/src/options/FormatOptsEditor/content/Custom.module.css
@@ -33,77 +33,96 @@
   margin-right: -6px;
 }
 
-.preview {
+.previewContainer {
+  /* anchor preview label */
   position: relative;
-  padding: 16px 18px 0;
-  font-size: 10px;
-  border-radius: 10px;
-  color: #000;
-  background-color: #ebebeb;
 
-  @media (prefers-color-scheme: dark) {
-    color: #ffffffcc;
-    background-color: #202020;
-  }
-
-  .previewText {
-    width: 300px;
-    font-family: monospace;
-    white-space: pre;
-    overflow-y: hidden;
-    overflow-x: scroll;
+  .previewScroll {
+    width: 330px;
+    max-height: 192px;
+    border: 6px solid transparent;
+    border-radius: 10px;
+    box-sizing: border-box;
+    overflow: scroll;
     outline: none;
+    color: #000;
+    background-color: #e8e8e8;
+
+    @media (prefers-color-scheme: dark) {
+      color: #ffffffcc;
+      background-color: #202020;
+    }
 
     &::-webkit-scrollbar {
-      width: 16px;
-      height: 16px;
+      width: 6px;
+      height: 6px;
     }
 
     &::-webkit-scrollbar-thumb {
-      border-style: solid;
-      border-width: 6px 0;
-      border-color: transparent;
-      background-clip: padding-box;
+      border-radius: 100px;
       background-color: #99999955;
     }
 
     &::-webkit-scrollbar-corner {
       background-color: transparent;
     }
-  }
 
-  .previewLabel {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 8px 16px;
-    font-family:
-      system-ui,
-      -apple-system,
-      BlinkMacSystemFont,
-      'Segoe UI',
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell,
-      'Open Sans',
-      'Helvetica Neue',
-      sans-serif;
-    border-bottom-left-radius: 10px;
-    border-top-right-radius: 10px;
-    pointer-events: none;
-    color: #555;
-    background-color: #0000000c;
-    opacity: 1;
-    transition: opacity 200ms;
+    .preview {
+      padding: 12px;
+      font-size: 10px;
 
-    @media (prefers-color-scheme: dark) {
-      color: #fff;
-      background-color: #00000038;
-    }
+      .previewHtml {
+        font-family: monospace;
+        outline: none;
 
-    .preview:hover & {
-      opacity: 0;
+        a {
+          color: #008ed8;
+        }
+      }
+
+      /* potential future need */
+      /* 
+      .previewText {
+        white-space: pre;
+        font-family: monospace;
+        outline: none;
+      }
+      */
+
+      .previewLabel {
+        position: absolute;
+        top: 0;
+        right: 18px;
+        padding: 8px 16px;
+        font-family:
+          system-ui,
+          -apple-system,
+          BlinkMacSystemFont,
+          'Segoe UI',
+          Roboto,
+          Oxygen,
+          Ubuntu,
+          Cantarell,
+          'Open Sans',
+          'Helvetica Neue',
+          sans-serif;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        pointer-events: none;
+        color: #000;
+        background-color: #0000000f;
+        opacity: 1;
+        transition: opacity 200ms;
+
+        @media (prefers-color-scheme: dark) {
+          color: #fff;
+          background-color: #00000038;
+        }
+
+        .preview:hover & {
+          opacity: 0;
+        }
+      }
     }
   }
 }
