--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -28,3 +28,8 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.hero__subtitle {
+  margin-bottom: 10px;
+  font-weight: 200;
+}
