--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -17,6 +17,10 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
+li::marker {
+  color: #000;
+}
+
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
   --ifm-color-primary: #e93d82;
@@ -41,6 +45,10 @@
   h6,
   code,
   strong {
+    color: #fff;
+  }
+
+  li::marker {
     color: #fff;
   }
 }
