--- a/website/src/components/Screenshot/styles.module.css
+++ b/website/src/components/Screenshot/styles.module.css
@@ -1,12 +1,25 @@
-.screenshotContainer {
-  display: flex;
-  justify-content: center;
-}
+.images {
+  position: relative;
+  font-size: 0;
 
-.screenshot {
-  width: auto;
-  /* explicit height avoids load jank */
-  height: 316.67px;
-  transform: translateY(-24px);
-  filter: drop-shadow(2px 4px 16px #0000005e);
+  .screenshotImage {
+    width: auto;
+    /* explicit height avoids load jank */
+    height: 316.67px;
+    border-radius: 6px;
+    filter: drop-shadow(2px 4px 16px #0000005e);
+  }
+
+  .formatOverlay {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 48px;
+    border-radius: 6px;
+
+    &.selectedFormat {
+      opacity: 0;
+      transition: opacity 600ms;
+    }
+  }
 }
