--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -32,3 +32,9 @@
   align-items: center;
   justify-content: center;
 }
+
+.screenshotContainer {
+  display: flex;
+  justify-content: center;
+  transform: translateY(-24px);
+}
