--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -106,6 +106,44 @@ header {
   display: flex;
   flex-direction: column;
   gap: 10px;
+
+  .button-primary {
+    position: relative;
+
+    &::after {
+      /* pseudo-element doesn't render when content is none */
+      content: var(--count, none);
+      position: absolute;
+      right: 8px;
+      top: 50%;
+      transform: translateY(-50%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 20px;
+      padding: 0 8px;
+      font-size: 10px;
+      border-radius: 1000px;
+      background-color: #ffffffcf;
+
+      @media (prefers-color-scheme: dark) {
+        background-color: #ffffff1c;
+      }
+    }
+
+    &.single-digit-count::after {
+      width: 20px;
+      padding: 0;
+    }
+
+    &:focus::after {
+      background-color: #ffffff30;
+
+      @media (prefers-color-scheme: dark) {
+        background-color: #ffffff1c;
+      }
+    }
+  }
 }
 
 button {
