--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -50,10 +50,13 @@ header {
     inset: 0;
     display: flex;
     align-items: center;
+    gap: 2px;
+    padding-right: 6px;
 
     :is(button) {
       display: flex;
       align-items: center;
+      justify-content: center;
       gap: 8px;
       height: 24px;
       padding: 0 10px;
@@ -62,13 +65,19 @@ header {
       color: transparent;
       background-color: transparent;
 
+      /* is icon only */
+      &:not(:has(span)) {
+        width: 24px;
+        padding: 0;
+      }
+
       & svg {
         width: 12px;
         height: 12px;
-        color: #222;
+        color: #727272;
 
         @media (prefers-color-scheme: dark) {
-          color: #aaa;
+          color: #ffffff60;
         }
       }
 
