--- a/src/options/OptionTip/OptionTip.module.css
+++ b/src/options/OptionTip/OptionTip.module.css
@@ -15,16 +15,19 @@
 }
 
 .icon {
-  color: #666;
+  width: 20px;
+  height: 20px;
+  padding-left: 8px;
   font-size: 0;
+  color: #666;
 
   @media (prefers-color-scheme: dark) {
     color: #aaa;
   }
 
-  :is(svg) {
-    height: 20px;
-    margin-left: 8px;
+  >* {
+    width: 100%;
+    height: 100%;
   }
 }
 
